syntax = "proto3";
package monitor.proto;

message CpuLoad {
    float load_avg_1 = 1;//1分钟的CPU负载
    float load_avg_3 = 2;//5分钟的CPU负载
    float load_avg_15 = 3;//15分钟的CPU负载
  }